tests/baselines/reference/assignFromBooleanInterface.errors.txt
==== tests/cases/compiler/assignFromBooleanInterface.ts (1 errors) ====
    var x = true;
    var a: Boolean;
    x = a;
    ~
!!! assignFromBooleanInterface.ts(3,1): error TS2011: Cannot convert 'Boolean' to 'boolean'.
    a = x;